Fixed the last bugs and made it a bit neater. Fixed the crash - referencing MainActivity Context Removed most of the redundance

--- a/FloatyMon/Resources/layout/layout_floating_widget.xml
+++ b/FloatyMon/Resources/layout/layout_floating_widget.xml
@@ -30,7 +30,7 @@
     android:layout_height="wrap_content"/>
   <ImageView
     android:id="@+id/iv3"
-    android:src="@android:drawable/ic_menu_close_clear_cancel"
+    android:src="@android:drawable/ic_delete"
     android:layout_marginLeft="10dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"/>
