--- a/FloatyMon/Resources/layout/layout_floating_widget.xml
+++ b/FloatyMon/Resources/layout/layout_floating_widget.xml
@@ -11,28 +11,34 @@
         android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-<LinearLayout
-   android:orientation="horizontal"
-   android:layout_width="wrap_content"
-   android:layout_height="wrap_content">
 
-  <ImageView
-    android:id="@+id/iv1"
-    android:src="@android:drawable/ic_media_play"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+	<LinearLayout
+		android:padding="5dp"
+		android:orientation="horizontal"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
 
-  <ImageView
-    android:id="@+id/iv2"
-    android:src="@android:drawable/star_on"
-    android:layout_marginLeft="10dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
-  <ImageView
-    android:id="@+id/iv3"
-    android:src="@android:drawable/ic_delete"
-    android:layout_marginLeft="10dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
-</LinearLayout>
+		<ImageView
+			android:id="@+id/iv1"
+			android:contentDescription="HideView"
+			android:layout_marginLeft="10dp"
+			android:layout_marginTop="-5dp"
+			android:src="@android:drawable/btn_star_big_on"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"/>
+
+		<View
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_weight="1" />
+
+		<ImageView
+			android:id="@+id/iv2"
+			android:contentDescription="StopServices"
+			android:src="@android:drawable/ic_delete"
+			android:layout_marginLeft="10dp"
+			android:layout_marginRight="10dp"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"/>
+	</LinearLayout>
 </LinearLayout>
